# Native-Hash-Calculator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  resources.rc  resources.res
