[package]
name = "nhc"
version = "0.0.3"
edition = "2018"
authors = ["Guillermo, guillermo@guillerpsanchez.dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
native-windows-gui = "1.0.11"
native-windows-derive = "1.0.3"
blake3 = "0.3.8"
hex = "0.4.2"